--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,28 @@
 {
     "cSpell.words": [
+        "Décorateur",
+        "erreurs",
+        "existant",
+        "Gestionnaire",
+        "Initialisation",
+        "invalide",
+        "jeton",
+        "journalisation",
+        "journaliser",
         "jsonify",
-        "qrcode"
+        "manquant",
+        "mettre",
+        "nouvel",
+        "organiser",
+        "qrcode",
+        "Récupération",
+        "récupérer",
+        "Schéma",
+        "schémas",
+        "secrète",
+        "supprimer",
+        "tous",
+        "vérifier",
+        "votre"
     ]
 }
