--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,28 @@
 {
     "cSpell.words": [
+        "convertir",
         "Décorateur",
         "erreurs",
         "existant",
+        "Fonction",
         "Gestionnaire",
         "Initialisation",
         "invalide",
         "jeton",
         "journalisation",
+        "journalisationpo",
         "journaliser",
         "jsonify",
         "manquant",
         "mettre",
         "nouvel",
         "organiser",
+        "paramètres",
+        "plusieurs",
         "qrcode",
         "Récupération",
         "récupérer",
+        "sauvegarde",
         "Schéma",
         "schémas",
         "secrète",
