Revision_modif_flask

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,10 @@
         "Décorateur",
         "erreurs",
         "existant",
+        "expiré",
         "Fonction",
         "Gestionnaire",
+        "Inclure",
         "Initialisation",
         "invalide",
         "jeton",
@@ -18,7 +20,9 @@
         "nouvel",
         "organiser",
         "paramètres",
+        "permet",
         "plusieurs",
+        "présents",
         "qrcode",
         "Récupération",
         "récupérer",
@@ -28,6 +32,8 @@
         "secrète",
         "supprimer",
         "tous",
+        "valider",
+        "Vérification",
         "vérifier",
         "votre"
     ]
