--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "convertir",
         "Décorateur",
+        "depuis",
         "erreurs",
         "existant",
         "expiré",
@@ -15,11 +16,13 @@
         "journalisationpo",
         "journaliser",
         "jsonify",
+        "letogolais",
         "manquant",
         "mettre",
         "nouvel",
         "organiser",
         "paramètres",
+        "partiellement",
         "permet",
         "plusieurs",
         "présents",
@@ -30,6 +33,7 @@
         "Schéma",
         "schémas",
         "secrète",
+        "sont",
         "supprimer",
         "tous",
         "valider",
